# pain2wash

./: .dockerignore  Cargo.toml  Dockerfile  README.md  clippy.toml  fly.toml
grafana/: dashboard.json
influx/: Dockerfile  fly.toml
src/: main.rs  metrics.rs  pay2wash.rs  strict_types.rs
src/metrics/: boolean.rs  gauge_info.rs
src/pay2wash/: model.rs
