[package]
edition = "2021"
name = "pain2wash"
version = "0.1.0"

[dependencies]
color-eyre = "0.6.2"
dotenvy = "0.15.6"
envy = "0.4.2"
once_cell = "1.17.0"
reqwest = { version = "0.11.14", default-features = false, features = ["brotli", "cookies", "deflate", "gzip", "json", "multipart", "rustls-tls", "trust-dns"] }
scraper = "0.14.0"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
tracing = { version = "0.1.37" }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
validator = { version = "0.16.0", features = ["derive", "unic"] }
