[package]
edition = "2021"
name = "pain2wash"
version = "0.1.0"

[profile.release]
debug = 1
codegen-units = 1
lto = "thin"
overflow-checks = true

[dependencies]
color-eyre = "^0.6"
dotenvy = "^0.15"
envy = "^0.4"
once_cell = "^1.17"
prometheus-client = "^0.19"
reqwest = { version = "^0.11", default-features = false, features = ["brotli", "cookies", "deflate", "gzip", "multipart", "rustls-tls", "trust-dns"] }
scraper = "^0.14"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "1.0.38"
tokio = { version = "^1.24", features = ["full"] }
tracing = { version = "^0.1" }
tracing-error = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
