[package]
edition = "2021"
name = "pain2wash"
version = "0.1.0"

[profile.release]
debug = 1
codegen-units = 1
lto = "thin"
overflow-checks = true

[dependencies]
axum = { version = "0.6.3", features = ["macros"] }
color-eyre = "^0.6"
dotenvy = "^0.15"
envy = "^0.4"
git-version = "0.3.5"
hyper = "^0.14"
once_cell = "^1.17"
prometheus-client = "^0.19"
reqwest = { version = "^0.11", default-features = false, features = ["brotli", "cookies", "deflate", "gzip", "multipart", "rustls-tls", "trust-dns"] }
scraper = "^0.14"
sentry = { version = "^0.29", default-features = false, features = ["rustls", "tracing", "tower", "backtrace", "contexts", "panic", "reqwest"] }
sentry-tower = { version = "^0.29", features = ["http"] }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tokio = { version = "^1.24", features = ["full"] }
tower = "^0.4"
tower-http = { version = "^0.3", features = ["catch-panic", "trace"] }
tracing = { version = "^0.1" }
tracing-error = "^0.2"
tracing-subscriber = { version = "^0.3", features = ["env-filter", "json"] }
